--- a/src/components/test/GMT时间格式转换.html
+++ b/src/components/test/GMT时间格式转换.html
@@ -13,7 +13,7 @@
   var arr = str.split('_')
   console.log(arr[2].charAt(0).toLocaleUpperCase()+(arr[2].slice(1)).toLocaleLowerCase());
 
-  console.log('第一次提交');
+  console.log('第二次提交');
 </script>
 </body>
 </html>
